# camera

./: CMakeLists.txt  README.md  conanfile.py  loadConfig.xml
configs/: camera_importer.lconf
include/: camera.h  camera_importer.h  v4l2_wrapper.h
src/: camera.cpp  camera_importer.cpp  interface.cpp  v4l2_wrapper.cpp
